bin_PROGRAMS = wpaf
wpaf_CFLAGS = -DLOG_USE_COLOR
wpaf_SOURCES = font16.c  font24.c font12.c font20.c font8.c wpaf.c \
							 fan_driver.c fan_manager.c pcf8574_fan_controller.c \
							 cpu_controller.c \
							 ssd1306_display_controller.c \
							 null_display_controller.c \
							 gui.c \
							 waveshare_poehatb.c \
							 argon_forty.c argon_forty_fan_controller.c \
							 wpaf_i2c.c \
							 xpi_gamecon_fan_controller.c \
							 piboy.c \
							 pid_controller.c \
							 display_manager.c \
							 log.c\
							 mb_pwm_fan_controller.c \
							 rpi_poe_plus.c \
							 rpi_pwm_fan_controller.c\
							 fan_shim.c

